--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,11 @@
             <artifactId>pagehelper</artifactId>
             <version>5.1.8</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/log4j/log4j &ndash;&gt;
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 </project>
